src/test/ui/const-eval/issue-52442.stderr
error[E0019]: constant contains unimplemented expression type
  --> $DIR/issue-52442.rs:12:14
   |
LL |     [();  { &loop { break } as *const _ as usize } ]; //~ ERROR unimplemented expression type
   |              ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0019`.
